--- a/style.css
+++ b/style.css
@@ -1,41 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+/*Intialized full view*/
+body {
+    margin: 0;
+    padding: 0;
+}
 
-.body {
+/* Head and main properties initial view set */
+
+main {
     max-width: 85%;
-    height: 2534px;
     margin: 0 auto;
-
 }
 
-.total-head {
-    padding: 10% 10%;
-
-}
-
-.background {
+/* Included background and top banner style */
+.banner {
     background-color: #161616;
-    display: flex;
-    width: 1321px;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border-radius: 30px;
+    width: 1320px;
     height: 646px;
+    margin: 80px auto;
+    padding: 40px 60px;
 
 }
 
-.head-text {
-    font-family: Poppins;
-    font-size: 70px;
-    font-weight: 700;
-    line-height: 80px;
+/* Top banner text style */
+.header-text {
+    display: flex;
+    align-items: center;
+}
+
+.header-text h1 {
+    font-family: poppins;
     color: #FFFFFF;
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 100px;
 
 }
 
-/*.image {
+.header-text p {
+    font-family: poppins;
+    color: #FFFFFF;
+}
+
+/* top banner image style */
+
+.banner-image img {
     width: 100%;
-    height: 90%;
-    padding-right: 5%;
+    /* margin-bottom: -30px; */
 }
-*/
+
+/* top banner image height */
+/* .banner-image img {
+    height: 650px;
+} */
+
+/* main body property layout style */
 .container {
     display: grid;
     width: 40%;
@@ -43,12 +67,47 @@
     gap: 10px;
 }
 
+/* Grid Blog property style */
 .blog {
     padding: 5px;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
 }
 
+/* blog prooperty image style*/
 .blog img {
     width: 100%;
+}
+
+/* parent style of footer */
+.footer-title {
+    background-color: #161616;
+    margin: 0;
+    padding: 70px 0;
+}
+
+.footer-logo {
+    text-align: center;
+}
+
+/* contains footer item*/
+.footer-option {
+    display: flex;
+    justify-content: center;
+}
+
+/* gap between item */
+.footer-space {
+    padding: 0 20px;
+
+}
+
+/* footer logo font color */
+h3 {
+    color: #FFFFFF;
+}
+
+/* footer items font color */
+h5 {
+    color: #FFFFFF;
 }
