--- a/style.css
+++ b/style.css
@@ -106,6 +106,28 @@ body {
     font-family: poppins;
     width: 100px;
     height: 32px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.blog-item p {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+}
+
+.blog-item span {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: rgba(22, 22, 22, 0.7);
+    padding-right: 50px;
+
 }
 
 /* parent style of footer */
