--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 /*Intialized full view*/
 body {
+    font-family: poppins;
     margin: 0;
     padding: 0;
 }
@@ -9,7 +10,7 @@ body {
 .container {
 
     width: 1320px;
-    margin: 0 140px;
+    margin: 0 auto;
 }
 
 /* Head and main properties initial view set */
@@ -80,6 +81,13 @@ body {
 } */
 
 /* main body property layout style */
+
+.blog-container-main {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 10px;
+}
+
 .blog-main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -91,6 +99,28 @@ body {
     padding: 5px;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
+}
+
+.sidebar-card {
+    background-color: #161616;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.sidebar-button-main {
+    display: block;
+}
+
+.sidebar-button {
+    text-transform: capitalize;
+    text-decoration: none;
+    padding: 17px 39px;
+    background: #FFFFFF;
+    color: #161616;
+    border-radius: 10px;
+    margin: 20px 0;
+    font-weight: 500;
+
 }
 
 /* blog prooperty image style*/
