--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 10px;
+    padding: 60px 0px;
 }
 
 .blog-main {
@@ -95,7 +96,8 @@ body {
 }
 
 /* Grid Blog property style */
-.blog {
+.blog,
+.upcoming-match {
     padding: 5px;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
@@ -105,9 +107,11 @@ body {
     background-color: #161616;
     padding: 20px;
     border-radius: 10px;
+    margin: 0 auto;
+    text-align: center;
 }
 
-.sidebar-button-main {
+.sidebar-card a {
     display: block;
 }
 
@@ -120,7 +124,32 @@ body {
     border-radius: 10px;
     margin: 20px 0;
     font-weight: 500;
+    text-align: center;
 
+}
+
+.sidebar-button:hover {
+    text-transform: capitalize;
+    text-decoration: none;
+    padding: 17px 39px;
+    background: #DD0000;
+    color: #FFFFFF;
+    border-radius: 10px;
+    margin: 20px 0;
+    font-weight: 500;
+    text-align: center;
+}
+
+.sidebar-active {
+    text-transform: capitalize;
+    text-decoration: none;
+    padding: 17px 39px;
+    background: #DD0000;
+    color: #FFFFFF;
+    border-radius: 10px;
+    margin: 20px 0;
+    font-weight: 500;
+    text-align: center;
 }
 
 /* blog prooperty image style*/
@@ -191,4 +220,29 @@ h3 {
 /* footer items font color */
 h5 {
     color: #FFFFFF;
+}
+
+.flag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.flag span {
+    padding: 0 10px;
+}
+
+.upcoming-match-item {
+    text-align: center;
+}
+
+.team {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.view-all-button {
+    padding: 60px 0;
+    display: none;
 }
