--- a/style.css
+++ b/style.css
@@ -152,8 +152,12 @@ body {
     text-align: center;
 }
 
+.blog {
+    width: 100%;
+}
+
 /* blog prooperty image style*/
-.blog img {
+.blog-image img {
     width: 100%;
 }
 
@@ -190,9 +194,9 @@ body {
 }
 
 /* parent style of footer */
-.footer-title {
+.footer-main {
     background-color: #161616;
-    margin: 0;
+
     padding: 70px 0;
 }
 
@@ -250,6 +254,12 @@ h5 {
 
 /* Tab view */
 @media only screen and (max-width: 992px) {
+    .container {
+
+        width: 100%;
+        margin: 0 auto;
+    }
+
     .blog-main {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -257,8 +267,8 @@ h5 {
     }
 
     .blog-container-main {
-        display: grid;
-        grid-template-columns: 1fr;
+
+        grid-template-columns: 2fr;
 
     }
 
@@ -266,6 +276,9 @@ h5 {
         display: none;
     }
 
+    .blog img {
+        width: 100%;
+    }
 
     .view-all-button {
 
@@ -275,6 +288,11 @@ h5 {
 
     .view-all-button .hero-button {
         margin: 0 auto;
+    }
+
+    .footer-main {
+        padding: 40px 0;
+        width: 100%;
     }
 
 }
