--- a/style.css
+++ b/style.css
@@ -256,8 +256,20 @@ h5 {
 @media only screen and (max-width: 992px) {
     .container {
 
-        width: 100%;
+        width: 94%;
         margin: 0 auto;
+    }
+
+    .header-text h1 {
+        font-size: 40px;
+        line-height: 50px;
+
+    }
+
+    .banner-image img {
+        width: 400px;
+        margin-top: 265px;
+        padding: 0 20px;
     }
 
     .blog-main {
@@ -295,4 +307,73 @@ h5 {
         width: 100%;
     }
 
+    .top-bar {
+        display: inline;
+    }
+
+    .topbar {
+        margin: 0 auto;
+    }
+
+    .top-button {
+        padding: 17px 39px;
+        color: #161616;
+        margin: 0px 20px;
+        font-weight: 500;
+        text-align: center;
+        text-decoration: none;
+        background: #FFFFFF;
+        border: 1px solid #E8E8E8;
+        border-radius: 10px;
+    }
+
+    .top-active-button {
+        padding: 17px 39px;
+        color: #FFFFFF;
+        margin: 0px 20px;
+        font-weight: 500;
+        text-align: center;
+        text-decoration: none;
+        background: #DD0000;
+        border: 1px solid #E8E8E8;
+        border-radius: 10px;
+
+    }
+
+    .top-button-container {
+        display: inline;
+        margin: 0 auto;
+    }
+
+}
+
+@media screen and (max-width: 662px) {
+    .banner-main {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr;
+        text-align: center;
+        padding: 70px 0;
+    }
+
+    .header-text h1 {
+        font-size: 24px;
+        line-height: 32px;
+
+    }
+
+    .banner-image img {
+        width: 320px;
+        margin-top: 50px;
+    }
+
+    .top-button-container a {
+        display: block;
+        margin: 10px;
+    }
+
+    .blog-main {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 5px;
+    }
 }
