--- a/style.css
+++ b/style.css
@@ -252,6 +252,24 @@ h5 {
     text-align: center;
 }
 
+/* .topbar {
+    display: none;
+} */
+hr {
+    color: #FFFFFF;
+    width: 1320px;
+    height: 0px;
+    left: 140px;
+    top: 2330px;
+
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.social-icon a {
+    text-decoration: none;
+    font-size: 100px;
+}
+
 /* Tab view */
 @media only screen and (max-width: 992px) {
     .container {
@@ -347,6 +365,10 @@ h5 {
 
 }
 
+hr {
+    width: 734px;
+}
+
 @media screen and (max-width: 662px) {
     .banner-main {
         grid-template-columns: repeat(1, 1fr);
@@ -363,7 +385,7 @@ h5 {
 
     .banner-image img {
         width: 320px;
-        margin-top: 50px;
+        margin-top: 168px;
     }
 
     .top-button-container a {
@@ -375,5 +397,14 @@ h5 {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 5px;
+    }
+
+    .footer-option {
+        display: block;
+        text-align: center;
+    }
+
+    hr {
+        width: 335px;
     }
 }
