--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ body {
 .banner-image img {
     width: 580px;
     margin-top: 75px;
+    transition: 0.7s ease-in-out;
+}
+
+.banner-image img:hover {
+    transform: scale(1.5);
+
 }
 
 .hero-area-button {
@@ -252,9 +258,10 @@ h5 {
     text-align: center;
 }
 
-/* .topbar {
+.topbar-main {
     display: none;
-} */
+}
+
 hr {
     color: #FFFFFF;
     width: 1320px;
@@ -265,9 +272,20 @@ hr {
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.icon {
+    display: inline-block;
+    padding: 0 30px;
+}
+
+.social-icon {
+    display: block;
+    text-align: center;
+}
+
 .social-icon a {
     text-decoration: none;
-    font-size: 100px;
+    font-size: 30px;
+    color: #FFFFFF;
 }
 
 /* Tab view */
@@ -314,6 +332,10 @@ hr {
 
         display: block;
 
+    }
+
+    .topbar-main {
+        display: block;
     }
 
     .view-all-button .hero-button {
@@ -374,7 +396,7 @@ hr {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: 1fr;
         text-align: center;
-        padding: 70px 0;
+        padding: 30px 0;
     }
 
     .header-text h1 {
@@ -385,7 +407,7 @@ hr {
 
     .banner-image img {
         width: 320px;
-        margin-top: 168px;
+        margin-top: 128px;
     }
 
     .top-button-container a {
